--- a/README.org
+++ b/README.org
@@ -1,6 +1,10 @@
 Moore-Penrose pseudo-inverse with Eigen3
   
-1. Download eigen (from http://eigen.tuxfamily.org/index.php?title=Main_Page)
+1. Download eigen (from http://eigen.tuxfamily.org/index.php?title=Main_Page), 
+   or alternatively, run 
+   #+BEGIN_SRC sh
+     ./build_eigen
+   #+END_SRC
 2. Extract to current directory eigen-3.2.1
 3. Compile the code with 
 #+BEGIN_SRC sh  
